experiments/odh-devstack/config/odh-gateway-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: odh-gateway
  namespace: opendatahub
  labels:
    app: odh-gateway
    service: odh-gateway-svc
spec:
  host: odh-gateway.apps-crc.testing
  to:
    kind: Service
    name: odh-gateway-svc
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
